<resources>
    <string name="app_name">SyncCases</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="SyncCases_Logo">SyncCases Logo</string>
    <string name="user_registration">User Registration</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="primary_phone_contact">Primary phone contact #</string>
    <string name="chat">Chat</string>


    <!-- Intent Extras -->
    <string name="intent_chatroom">intent_chatroom</string>


    <!-- Dialog Names -->
    <string name="dialog_change_photo">ChangePhotoDialog</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_reports">reports</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_signed_in">SignedInActivity</string>
    <string name="title_activity_change_photo_dialog">ChangePhotoDialogActivity</string>
    <string name="title_activity_resend_verification_dialog">ResendVerificationDialog</string>
    <string name="title_activity_password_reset_dialog">PasswordResetDialog</string>

</resources>












