<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_registration"
                    android:textSize="25sp"
                    android:textColor="@color/Black"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:id="@+id/textEmailReg"/>


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:layout_below="@+id/textEmailReg"/>

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:hint="Full Name"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_below="@+id/input_name"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:layout_below="@+id/input_password"/>

                <EditText
                    android:id="@+id/input_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="number"
                    android:hint="@string/age"
                    android:layout_below="@+id/input_confirm_password"/>

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:layout_below="@+id/input_age"/>

                <EditText
                    android:id="@+id/input_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:hint="Organization Name"
                    android:layout_below="@+id/input_phone"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/input_organization"
                    android:text="@string/register"
                    android:background="@drawable/blue_button"/>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>